examples/pass/globals.c
int x, y, z;

int main() {
  x = 3;
  y = x;
  z = x + y;
}
