examples/error/errorMain2.c
int main({)
    printf("no deberia imprimir esto, errorMain2");
}
